--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Kellemes időtöltést kíván a My Time Csapata!
 							<img src="images/basket.png" alt="" width="90" height="90">
 						</div>
 						<h2>Fodrászat</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p></p>
 					</div>
                 </div><!-- end col -->
                 <div class="col-md-4">
@@ -188,7 +188,7 @@ Kellemes időtöltést kíván a My Time Csapata!
 							<img src="images/creativity.png" alt="" width="90" height="90">
 						</div>
 						<h2>Manikűr</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p></p>
 					</div>
                 </div><!-- end col -->
 				<div class="col-md-4">
@@ -197,7 +197,7 @@ Kellemes időtöltést kíván a My Time Csapata!
 							<img src="images/camera.png" alt="" width="90" height="90">
 						</div>
 						<h2>Kozmetika</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p></p>
 					</div>
                 </div><!-- end col -->
 				<div class="col-md-4">
@@ -206,7 +206,7 @@ Kellemes időtöltést kíván a My Time Csapata!
 							<img src="images/szempilla.png" alt="" width="90" height="90">
 						</div>
 						<h2>Szempillaépítés</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p></p>
 					</div>
                 </div><!-- end col -->
 				<div class="col-md-4">
@@ -873,12 +873,12 @@ Kellemes időtöltést kíván a My Time Csapata!
 					</a>
                 </div><!-- end col -->
 				<div class="col-md-4">
-					<a  href="https://www.google.com/maps/place/Budapest,+Ny%C3%ADrpalota+%C3%BAt+3,+1157/@47.538435,19.1348933,17z/data=!3m1!4b1!4m5!3m4!1s0x4741db18903ef209:0x303dce7dda2b69ee!8m2!3d47.538435!4d19.137082">
+					<a  href="https://www.google.com/maps/place/Budapest,+%C3%9Ajsz%C3%A1sz+u.+76,+1165/@47.5055602,19.1951768,17z/data=!3m1!4b1!4m5!3m4!1s0x4741c488b5c037d7:0x581f9a3ef92cd51b!8m2!3d47.5055602!4d19.1973655">
                     <div class="services-inner-box">
 						<div  class="ser-icon">
 							<i class="fa fa-map-marker" style="padding-top:20px"></i>
 						</div>
-						<h2>1157, Nyírpalota út 3.9/29.</h2>
+						<h2>1165, Bp. Újszász u. 176.</h2>
 						<p>Megközelítés 45-ös és 46-os busszal lehetséges</p>
 					</div>
 					</a>
