--- a/etrend.html
+++ b/etrend.html
@@ -189,7 +189,7 @@ Ha felkeltettem az érdeklődésed, keress bizalommal!</p><p>
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="images/etrend.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
