--- a/index.html
+++ b/index.html
@@ -176,10 +176,20 @@ Kellemes időtöltést kíván a My Time Csapata!
 				<div class="col-md-4">
                     <div class="services-inner-box">
 						<div class="ser-icon">
+							<img src="images/aqua.png" alt="" width="90" height="90">
+						</div>
+						<h2>Cocoon aqua ir hydration alakformáló wellness gép</h2>
+						<a href="aqua.html" class="sim-btn hvr-rectangle-out"><span>Bővebben</span></a>
+					</div>
+                </div><!-- end col -->
+				
+				<div class="col-md-4">
+                    <div class="services-inner-box">
+						<div class="ser-icon">
 							<img src="images/basket.png" alt="" width="90" height="90">
 						</div>
 						<h2>Fodrászat</h2>
-						<p></p>
+						<p>hamarosan</p>
 					</div>
                 </div><!-- end col -->
                 <div class="col-md-4">
@@ -188,7 +198,7 @@ Kellemes időtöltést kíván a My Time Csapata!
 							<img src="images/creativity.png" alt="" width="90" height="90">
 						</div>
 						<h2>Manikűr</h2>
-						<p></p>
+						<p>hamarosan</p>
 					</div>
                 </div><!-- end col -->
 				<div class="col-md-4">
@@ -198,6 +208,7 @@ Kellemes időtöltést kíván a My Time Csapata!
 						</div>
 						<h2>Kozmetika</h2>
 						<p></p>
+						<a href="https://hamarjudit.hu/#arak" class="sim-btn hvr-rectangle-out"><span>Bővebben</span></a>
 					</div>
                 </div><!-- end col -->
 				<div class="col-md-4">
@@ -207,17 +218,10 @@ Kellemes időtöltést kíván a My Time Csapata!
 						</div>
 						<h2>Szempillaépítés</h2>
 						<p></p>
+						<a href="#pricing" class="sim-btn hvr-rectangle-out"><span>Árak</span></a>
 					</div>
                 </div><!-- end col -->
-				<div class="col-md-4">
-                    <div class="services-inner-box">
-						<div class="ser-icon">
-							<img src="images/aqua.png" alt="" width="90" height="90">
-						</div>
-						<h2>Cocoon aqua ir hydration alakformáló wellness gép</h2>
-						<a href="aqua.html" class="sim-btn hvr-rectangle-out"><span>Bővebben</span></a>
-					</div>
-                </div><!-- end col -->
+				
 				<div class="col-md-4">
                     <div class="services-inner-box">
 						<div class="ser-icon">
