--- a/fodrasz.html
+++ b/fodrasz.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">	
  
      <!-- Site Metas -->
-    <title>MYTIME cacoon aqua</title>  
+    <title>MYTIME fodrász</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -148,40 +148,21 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2>Mi az a Cocoon Aqua IR Hydration Pro Pod?</h2>
-                        <p style="font-size: 17px">A gyengéd gőzáramlás kényezteti Önt, elősegítve az esszenciális tápanyagok és folyékony
-vitaminok felszívódását a természetes „szépségfokozás” érdekében. Az infravörös
-melegítéssel és a bőr hidratálásával a gőz finoman helyreállítja az egyensúlyt, a bőr friss,
-tiszta és ragyogó lesz a kezelés hatására. A folyékony vitaminokkal infúzióban lévő IR gőz
-természetes úton tisztítja meg a testet, s a kezelés végén egy ellazult és feltöltődött testet és
-lelket eredményez. Az érintett testfelület a kényelmes és illatos kondenzációs takaróba
-burkolva hatékonyan felszívja a nedvességet, ennek eredményeként a bőr intenzív hidratálása
+                        <h2>Bemutatkozó</h2>
+                        <p style="font-size: 17px">Rada Dóra vagyok és örömmel köszöntelek titeket, leendő vendégeimet!
 
-és tonizálása megtörténik.
+2008 óta vagyok fodrász, de a szakma iránt már gyerekkorom óta rajongok. :)<br>
+Számomra az a fontos, hogy vendégeimnek a legjobbat nyújtsam maximális tudásommal és minőségi termékekkel.
+A szakmámat az életem részének tekintem,
+mivel azon szerencsés emberek közé tartozom akik nagyon szeretik és élvezik munkájuk minden egyes pillanatát.
+ Próbálom a frizurákat „személyre szabni” így minden vendég az egyéniségéhez, stílusához illőt kapja.
+Szeretek ötleteket adni,
+de ugyanakkor szívesen veszem a vendégek által kiválasztott frizuráról hozott képet, információt ami nagyrészt segíti a munkámat.
+Esküvői és alkalmi kontyokban, fonásokban is követem a divatot. :)<br>
+Várlak szeretettel !
 </p>
 
-<h2>Hány kezelésre van szükségem?</h2>
-                        <p style="font-size: 17px">Az eredményeket a legelső kezelés után már meg is tapasztalhatja. A kikapcsolódás,
-feltöltődés és energikus érzés, valamint a bőr hidratálása és kondicionálása, továbbá a javult
-bőrszín és textúra a kezelésnek csak néhány előnye. A súlykezeléshez 5 vagy több alkalom
-ajánlott következetes alapon, de a kezelési terv az Ön egyéni céljaihoz igazítható.
-</p>
 
-<h2>Mit viselek a gép használatakor?</h2>
-                        <p style="font-size: 17px">Viselhet fürdőruhát vagy fehérneműt. A kezelések 15-25 percig tartanak.
-</p>
-
-<h2>A kezelés előnyei a következők:</h2>
-                        <p style="font-size: 17px">&#8226; A teljes test bőrének hidratálása és táplálása;<br>
-&#8226; Segít eltávolítani a felesleges folyadékot, méreganyagokat és szennyeződéseket;<br>
-&#8226; Kalóriaégetés;<br>
-&#8226; A bőr tónusának és textúrájának javítása;<br>
-&#8226; Az egész testet feltölti, engergetizál;<br>
-&#8226; Javítja az állóképességet, segíti az alakformálást és a bőrfeszesítést;<br>
-&#8226; Csökkenti a stresszt;<br>
-&#8226; Elősegíti a jobb alvást;<br>
-&#8226; Enyhíti és csillapítja az izomfájdalmakat.
-</p>
 						<!--<ul>
 							<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 							<li>Nullam ut massa id odio imperdiet consequat.</li>
@@ -189,13 +170,13 @@ ajánlott következetes alapon, de a kezelési terv az Ön egyéni céljaihoz ig
 							<li>Cras id libero iaculis, sodales ligula vitae, egestas odio.</li>
 							<li>Aenean congue ex et bibendum porta.</li>
 						</ul>-->
-                        <a href="#contact" class="sim-btn hvr-rectangle-out"><span>Beszéljünk még ma</span></a>
+                        <!--<a href="#contact" class="sim-btn hvr-rectangle-out"><span>Beszéljünk még ma</span></a>-->
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="images/aqua.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="images/referenciamunka/fo2.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
