--- a/szempillas.html
+++ b/szempillas.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">	
  
      <!-- Site Metas -->
-    <title>MYTIME cacoon aqua</title>  
+    <title>MYTIME szempillás</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -148,40 +148,32 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2>Mi az a Cocoon Aqua IR Hydration Pro Pod?</h2>
-                        <p style="font-size: 17px">A gyengéd gőzáramlás kényezteti Önt, elősegítve az esszenciális tápanyagok és folyékony
-vitaminok felszívódását a természetes „szépségfokozás” érdekében. Az infravörös
-melegítéssel és a bőr hidratálásával a gőz finoman helyreállítja az egyensúlyt, a bőr friss,
-tiszta és ragyogó lesz a kezelés hatására. A folyékony vitaminokkal infúzióban lévő IR gőz
-természetes úton tisztítja meg a testet, s a kezelés végén egy ellazult és feltöltődött testet és
-lelket eredményez. Az érintett testfelület a kényelmes és illatos kondenzációs takaróba
-burkolva hatékonyan felszívja a nedvességet, ennek eredményeként a bőr intenzív hidratálása
-
-és tonizálása megtörténik.
+                        <h2>Bemutatkozó</h2>
+                        <p style="font-size: 17px">Kedves leendő  vendégem!
+Árendás Eszter vagyok, 2008 óta foglalkozom és képzem magam a szempilla hosszabbítás vègtelen vilàgàban.☺️ <br>
+<br>
+Célom, hogy mindenki az elképzelésének megfelelő , szemèlyre szabott pillákkal, elégedetten távozzon. 
+Professzionális termékekkel dolgozom amik biztosítják a minősèg egyik felèt a másikért èn felelek és ezért is imádom! 😍 <br>
+<br>
+Legelső alkalommal amikor hozzám érkezel tartunk egy rövid kb. 15perces konzultàciót ahol megbeszéljük a hozzád legjobban illő stylingot.
+Ami az alábbiakból àll: <br>
+<br>
+* szempilla állomànyod felmérése <br>
+* a te igényeid megbeszèlése <br>
+* az èn szakmai véleményem <br>
+* beleegyező nyilatkozat kitöltése <br>
+<br>
+Kezelés alatt tájékoztatlak az elő és utó ápolásról, esetleges allergiás reakciókról, a töltésről, stb. <br>
+<br>
+A mottóm : "Laza elegancia” <br>
+<br>
+Várlak sok szeretettel! <br>
+<br>
+Árendás Eszter <br>
+Szempilla Stylist
 </p>
 
-<h2>Hány kezelésre van szükségem?</h2>
-                        <p style="font-size: 17px">Az eredményeket a legelső kezelés után már meg is tapasztalhatja. A kikapcsolódás,
-feltöltődés és energikus érzés, valamint a bőr hidratálása és kondicionálása, továbbá a javult
-bőrszín és textúra a kezelésnek csak néhány előnye. A súlykezeléshez 5 vagy több alkalom
-ajánlott következetes alapon, de a kezelési terv az Ön egyéni céljaihoz igazítható.
-</p>
 
-<h2>Mit viselek a gép használatakor?</h2>
-                        <p style="font-size: 17px">Viselhet fürdőruhát vagy fehérneműt. A kezelések 15-25 percig tartanak.
-</p>
-
-<h2>A kezelés előnyei a következők:</h2>
-                        <p style="font-size: 17px">&#8226; A teljes test bőrének hidratálása és táplálása;<br>
-&#8226; Segít eltávolítani a felesleges folyadékot, méreganyagokat és szennyeződéseket;<br>
-&#8226; Kalóriaégetés;<br>
-&#8226; A bőr tónusának és textúrájának javítása;<br>
-&#8226; Az egész testet feltölti, engergetizál;<br>
-&#8226; Javítja az állóképességet, segíti az alakformálást és a bőrfeszesítést;<br>
-&#8226; Csökkenti a stresszt;<br>
-&#8226; Elősegíti a jobb alvást;<br>
-&#8226; Enyhíti és csillapítja az izomfájdalmakat.
-</p>
 						<!--<ul>
 							<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 							<li>Nullam ut massa id odio imperdiet consequat.</li>
@@ -189,13 +181,13 @@ ajánlott következetes alapon, de a kezelési terv az Ön egyéni céljaihoz ig
 							<li>Cras id libero iaculis, sodales ligula vitae, egestas odio.</li>
 							<li>Aenean congue ex et bibendum porta.</li>
 						</ul>-->
-                        <a href="#contact" class="sim-btn hvr-rectangle-out"><span>Beszéljünk még ma</span></a>
+                        <!--<a href="#contact" class="sim-btn hvr-rectangle-out"><span>Beszéljünk még ma</span></a>-->
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="images/aqua.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="images/referenciamunka/pillas.jpeg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -221,7 +213,7 @@ ajánlott következetes alapon, de a kezelési terv az Ön egyéni céljaihoz ig
 						<div class="ser-icon">
 							<img src="images/phone.png" alt="" width="90" height="90">
 						</div>
-						<h2>+36205487697</h2>
+						<h2>+36703254473</h2>
 						
 					</div>
                 </div><!-- end col -->
