--- a/kormos.html
+++ b/kormos.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">	
  
      <!-- Site Metas -->
-    <title>MYTIME cacoon aqua</title>  
+    <title>MYTIME körmös</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -148,40 +148,20 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2>Mi az a Cocoon Aqua IR Hydration Pro Pod?</h2>
-                        <p style="font-size: 17px">A gyengéd gőzáramlás kényezteti Önt, elősegítve az esszenciális tápanyagok és folyékony
-vitaminok felszívódását a természetes „szépségfokozás” érdekében. Az infravörös
-melegítéssel és a bőr hidratálásával a gőz finoman helyreállítja az egyensúlyt, a bőr friss,
-tiszta és ragyogó lesz a kezelés hatására. A folyékony vitaminokkal infúzióban lévő IR gőz
-természetes úton tisztítja meg a testet, s a kezelés végén egy ellazult és feltöltődött testet és
-lelket eredményez. Az érintett testfelület a kényelmes és illatos kondenzációs takaróba
-burkolva hatékonyan felszívja a nedvességet, ennek eredményeként a bőr intenzív hidratálása
-
-és tonizálása megtörténik.
+                        <h2>Bemutatkozó</h2>
+                        <p style="font-size: 17px">Kedves leendő vendégem! Radics Nikolett vagyok,
+kézápoló és műkörmös tanulmányaimat 2020-ban végeztem. Oktatóm Csomai Bernadett a Perfect Nails oktató mestere és 6 x-os díszítő bajnoka volt.💅<br>
+Tanulmányaim befejeztével különböző továbbképzéseken vettem részt, hogy a lehető legjobbat nyújthassam.🔝<br>
+Célom, hogy ápolt, igényes, tökéletes körmökkel távozzanak a vendégeim és ennek érdekében még számos képzésen szeretnék résztvenni.👩‍🎓<br>
+Amivel foglalkozom:<br>
+💥Manikűr<br>
+💥Gél lakk<br>
+💥Műköröm építés (extrém forma: oroszmandula)
+Ha ellátogatsz hozzám nyugodt, harmonikus környezetben várlak, ahol mindig a vendég a legfontosabb.🥰<br>
+Várlak szeretettel❣
 </p>
 
-<h2>Hány kezelésre van szükségem?</h2>
-                        <p style="font-size: 17px">Az eredményeket a legelső kezelés után már meg is tapasztalhatja. A kikapcsolódás,
-feltöltődés és energikus érzés, valamint a bőr hidratálása és kondicionálása, továbbá a javult
-bőrszín és textúra a kezelésnek csak néhány előnye. A súlykezeléshez 5 vagy több alkalom
-ajánlott következetes alapon, de a kezelési terv az Ön egyéni céljaihoz igazítható.
-</p>
 
-<h2>Mit viselek a gép használatakor?</h2>
-                        <p style="font-size: 17px">Viselhet fürdőruhát vagy fehérneműt. A kezelések 15-25 percig tartanak.
-</p>
-
-<h2>A kezelés előnyei a következők:</h2>
-                        <p style="font-size: 17px">&#8226; A teljes test bőrének hidratálása és táplálása;<br>
-&#8226; Segít eltávolítani a felesleges folyadékot, méreganyagokat és szennyeződéseket;<br>
-&#8226; Kalóriaégetés;<br>
-&#8226; A bőr tónusának és textúrájának javítása;<br>
-&#8226; Az egész testet feltölti, engergetizál;<br>
-&#8226; Javítja az állóképességet, segíti az alakformálást és a bőrfeszesítést;<br>
-&#8226; Csökkenti a stresszt;<br>
-&#8226; Elősegíti a jobb alvást;<br>
-&#8226; Enyhíti és csillapítja az izomfájdalmakat.
-</p>
 						<!--<ul>
 							<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 							<li>Nullam ut massa id odio imperdiet consequat.</li>
@@ -189,13 +169,13 @@ ajánlott következetes alapon, de a kezelési terv az Ön egyéni céljaihoz ig
 							<li>Cras id libero iaculis, sodales ligula vitae, egestas odio.</li>
 							<li>Aenean congue ex et bibendum porta.</li>
 						</ul>-->
-                        <a href="#contact" class="sim-btn hvr-rectangle-out"><span>Beszéljünk még ma</span></a>
+                        <!--<a href="#contact" class="sim-btn hvr-rectangle-out"><span>Beszéljünk még ma</span></a>-->
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="images/aqua.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="images/referenciamunka/k13.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
