--- a/szempillas.html
+++ b/szempillas.html
@@ -187,7 +187,7 @@ Szempilla Stylist
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="images/referenciamunka/pillas.jpeg" alt="" class="img-fluid img-rounded">
+                        <img src="images/referenciamunka/pillas.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
